import { Controller, OnModuleInit, Logger } from '@nestjs/common';
import { Client, ClientGrpc, GrpcMethod } from '@nestjs/microservices';
import { grpcVehicleOptions } from 'src/grpc.client';

import {
  Vehiclhe,
  Driver,
  Snapshot,
  SnapshotData,
  OperationResult,
  VehicleService,
} from './interfaces/vehicle.xploitation.interface';
import { VehicleExploitationService } from './vehicle-exploitation.service';

@Controller('vehicle-exploitation')
export class VehicleExploitationController implements OnModuleInit {
  // inject VehicleExploitationService dependencies trough constructor
  constructor(private vehicleExploitationService: VehicleExploitationService) {
    this.logger = new Logger('VehicleExploitationController');
  }

  // implement vehicle proto file
  @Client(grpcVehicleOptions)
  private readonly client: ClientGrpc;

  private vehicleService: VehicleService;
  private logger: any;

  // on module init hook => wires up gRPC servece 'VehicleExploitationService'
  onModuleInit() {
    this.vehicleService = this.client.getService<VehicleService>(
      'VehicleExploitationService',
    );
  }

  @GrpcMethod('VehicleExploitationService')
  addVehicle(req: Vehiclhe): OperationResult {
    this.logger('addVehicle', 'req:', req);
    return this.vehicleExploitationService.addVehicle(req);
  }

  @GrpcMethod('VehicleExploitationService')
  addSnapshot(req: Snapshot): OperationResult {
    this.logger('addSnapshot', 'req:', req);
    return this.vehicleExploitationService.addSnapshot(req);
  }
}
